[package]
name = "sliced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custos = {path = "../custos", default-features=false, features=["macro"]}
fastrand = "1.8.0"

[features]
# try stack feature
default = ["stack", "cpu", "opencl", "blas", "matrix", "static-api"]
autograd = ["custos/autograd"]
static-api = ["custos/static-api"]
stack = ["custos/stack"]
cpu = ["custos/cpu"]
opencl = ["custos/opencl"]
blas = ["custos/blas"]
matrix = []

[dev-dependencies]
rawsliced = { path = "../rawsliced" }
graplot = "0.1.22"

[[test]]
name = "test_combination"
required-features = ["cpu", "autograd", "opencl"]

#[[test]]
#name = "nn/linear"
#required-features = ["cpu", "autograd", "opencl"]
