[package]
name = "sliced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#custos = { git = "https://github.com/elftausend/custos", branch = "autograd" }
#custos = {git = "https://github.com/elftausend/custos", branch = "autograd", default-features=false, features=["macro"]}
custos = {path = "../custos", default-features=false, features=["macro"]}
fastrand = "1.8.0"

[profile.release]
debug = true

[features]
default = ["blas", "cpu",  "matrix", "opencl", "autograd"]
#default = ["blas", "stack", "cpu", "matrix", "opencl", "autograd"]
#default = ["stack", "cpu", "opencl", "blas", "matrix", "static-api"]
autograd = ["custos/autograd"]
static-api = ["custos/static-api"]
stack = ["custos/stack"]
cpu = ["custos/cpu"]
opencl = ["custos/opencl", "cpu"]
blas = ["custos/blas"]
opt-cache = ["custos/opt-cache"]
realloc = ["custos/realloc"]
matrix = []
nnapi = ["custos/nnapi"]

[dev-dependencies]
rawsliced = { path = "../rawsliced" }
graplot = "0.1.22"
purpur = "0.1.0"

[[test]]
name = "test_combination"
required-features = ["cpu", "autograd", "opencl"]

#[[test]]
#name = "nn/linear"
#required-features = ["cpu", "autograd", "opencl"]
